2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_pad_pixbuf_for_size),
	(totem_embedded_set_logo_by_name), (totem_embedded_open_internal),
	(totem_embedded_set_error_logo), (totem_embedded_construct):
	Use the "totem" icon as the logo by default, set the error logo
	whenever we can't open a file

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_pad_pixbuf_for_size),
	(totem_embedded_set_logo_by_name), (totem_embedded_open_internal),
	(totem_embedded_set_error_logo), (totem_embedded_construct):
	Set the error logo for any stream that we can't open, use the
	default totem logo

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	add the SetErrorLogo method

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_pad_pixbuf_for_size),
	(totem_embedded_set_error_logo):
	Implement the SetErrorLogo method and show a centred
	"image-missing" image when a file isn't available which should be

	* browser-plugin/totemPlugin.cpp:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_logo),
	(bacon_video_widget_set_logo_pixbuf):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_logo),
	(bacon_video_widget_set_logo_pixbuf):
	* src/backend/bacon-video-widget.h:

	Implement bacon_video_widget_set_logo_pixbuf()
	(Closes: #387332)

2007-01-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp: support
	application/x-quicktime-media-link in the QuickTime plugin to
	allow playback at
	http://aftonbladet.se/special/webbtv/rockbjornen/quicktime.html
	(Closes: #395564)

2007-01-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_check_missing_plugins_error):
	(bvw_bus_message_cb):
	(bvw_error_from_gst_error):
	(poll_for_state_change_full):
	(poll_for_state_change):